--- a/mvc/appsettings.json
+++ b/mvc/appsettings.json
@@ -1,4 +1,6 @@
-{
+{"ConnectionStrings": {
+  "DefaultConnection" : "Data Source= aqui; Initial Catalog= ChamadoVerde; Integrated Security= True"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
