atualização de entity

--- a/mvc/appsettings.json
+++ b/mvc/appsettings.json
@@ -1,5 +1,5 @@
 {"ConnectionStrings": {
-  "DefaultConnection" : "Data Source= aqui; Initial Catalog= ChamadoVerde; Integrated Security= True"
+  "DefaultConnection" : "Data Source= DESKTOP-FOD61S6\\SQLEXPRESS01; Initial Catalog= ChamadoVerde; Integrated Security= True; Trusted_Connection=True; Encrypt=False"
 },
   "Logging": {
     "LogLevel": {
